--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseURL = "https://blog.dedigitaletopschool.nl/"
+languageCode = "nl-nl"
+title = "De Digitale Topschool blog"
+theme = 'base16'
