--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dedigitaletopschool-blog.netlify.com"
+baseURL = "https://dedigitaletopschool-blog.netlify.com/"
 languageCode = "nl-nl"
 title = "De Digitale Topschool blog"
 theme = 'base16'
